B&L QA/objects/Contract_Rebate__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Current IOL Contracts / Rebates:</relationshipLabel>
        <relationshipName>Contract_Rebates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Volume__c</fullName>
        <label>Type/Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Rebate</label>
    <nameField>
        <displayFormat>CONRE - {0000000000}</displayFormat>
        <label>Contract rebat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Rebates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>